# autocapt

./: README.md  data.py  data.txt
autocapt/: pyproject.toml  requirements.txt
autocapt/autocapt/: videotext.py
autocaptdjango/: db.sqlite3  manage.py
autocaptdjango/autocaptdjango/: asgi.py  settings.py  urls.py  wsgi.py
autocaptdjango/transcribe/: models.py  urls.py  views.py
autocaptdjango/transcribe/migrations/: 0001_initial.py
src/: videotext.py
